Enable the settings of localcontrast in the queue manager

Reenable the settings of localconstrat disabled at the begining of
the settings.

BUG: 271622